--- a/index.html
+++ b/index.html
@@ -1,40 +1,397 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Avengers</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <nav>
+      <a href="">Home.</a>
+      <a href="">Services.</a>
+      <a href="">Portfolio.</a>
+      <a href="">About.</a>
+      <a href="">Team.</a>
+      <a href="">Contact.</a>
+    </nav>
+    <header>
+      <img src="" alt="Logo for Avengers" title="Avengers logo">
+      <h1>Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong>awesome</strong> mobile and websites</h1>
+    </header>
+    <main>
+      <article>
+        <h1>SERVICES</h1>
+        <p></p>
+        <p></p>
+        <p></p>
+        <section>
+          <h1>UI & UX DESIGN</h1>
+          <img src="" alt="Icon of paintbrush" title="Paintbrush">
+          <p></p>
+        </section>
+        <section>
+          <h1>LABORATORY</h1>
+          <img src="" alt="Icon of flask" title="Flask">
+          <p></p>
+        </section>
+        <section>
+          <h1>DEVELOPMENT</h1>
+          <img src="" alt="Icon of gear" title="Gear">
+          <p></p>
+        </section>
+        <section>
+          <h1>PRICING TABLES</h1>
+          <ul>
+            <lh>BASIC</lh>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <button></button>
+          </ul>
+          <ul>
+            <lh>STANDARD</lh>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <button></button>
+          </ul>
+          <ul>
+            <lh>PROFESSIONAL</lh>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <button></button>
+          </ul>
+          <ul>
+            <lh>PREMIUM</lh>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <button></button>
+          </ul>
+        </section>
+      </article>
+      <article>
+        <h1>PORTFOLIO</h1>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li>
+            <figure>
+              <img src="" alt="Hand holding an iPhone" title="Crispers/Clouders app">
+            </figure>
+            <input type="radio" name="slider button" value="four" checked="checked">
+          </li>
+          <li></li>
+        </ul>
+        <section>
+          <h1>All works</h1>
+          <ul>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <figcaption>
+                  <h1>Youtube iphone app</h1>
+                  <h2>UI design, brand & logotypes</h2>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <figcaption>
+                  <h1>Youtube iphone app</h1>
+                  <h2>UI design, brand & logotypes</h2>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <figcaption>
+                  <h1>Youtube iphone app</h1>
+                  <h2>UI design, brand & logotypes</h2>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <figcaption>
+                  <h1>Youtube iphone app</h1>
+                  <h2>UI design, brand & logotypes</h2>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <figcaption>
+                  <h1>Youtube iphone app</h1>
+                  <h2>UI design, brand & logotypes</h2>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <figcaption>
+                  <h1>Youtube iphone app</h1>
+                  <h2>UI design, brand & logotypes</h2>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <figcaption>
+                  <h1>Youtube iphone app</h1>
+                  <h2>UI design, brand & logotypes</h2>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <figcaption>
+                  <h1>Youtube iphone app</h1>
+                  <h2>UI design, brand & logotypes</h2>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <figcaption>
+                  <h1>Youtube iphone app</h1>
+                  <h2>UI design, brand & logotypes</h2>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </section>
+      </article>
+      <article>
+        <h1>ABOUT</h1>
+        <p></p>
+        <p></p>
+        <section>
+          <h1>SKILLS</h1>
+          <ul>
+            <li>
+              <h1>PHOTOSHOP</h1>
+              <progress value="80" max="100"></progress>
+            </li>
+            <li>
+              <h1>HTML/CSS</h1>
+              <progress value="90" max="100"></progress>
+            </li>
+            <li>
+              <h1>ILLUSTRATOR</h1>
+              <progress value="70" max="100"></progress>
+            </li>
+            <li>
+              <h1>PHP</h1>
+              <progress value="60" max="100"></progress>
+            </li>
+            <li>
+              <h1>WORDPRESS</h1>
+              <progress value="95" max="100"></progress>
+            </li>
+          </ul>
+        </section>
+        <aside>
+          <p>Do you want to be one of the Avengers? Join us!</p>
+          <button>CONTACT US</button>
+        </aside>
+      </article>
+      <article>
+        <h1>TEAM</h1>
+        <p></p>
+        <section>
+          <h1>JONATHAN DOE<h1>
+          <h2>CEO, UI&UX designer</h2>
+          <figure>
+            <img src="" alt="Picture of Jonathan Doe" title="Jonathan Doe">
+            <figcaption>
+              <ul>
+                <li>
+                  <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
+                </li>
+              </ul>
+              <p></p>
+            </figcaption>
+          </figure>
+        </section>
+        <section>
+          <h1>JANNETE DOE<h1>
+          <h2>Business & marketing</h2>
+          <figure>
+            <img src="" alt="Picture of Jannete Doe" title="Jannete Doe">
+            <figcaption>
+              <ul>
+                <li>
+                  <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
+                </li>
+              </ul>
+              <p></p>
+            </figcaption>
+          </figure>
+        </section>
+        <section>
+          <h1>JANE ELLA DOE<h1>
+          <h2>UX specialist</h2>
+          <figure>
+            <img src="" alt="Picture of Jane Ella Doe" title="Jane Ella Doe">
+            <figcaption>
+              <ul>
+                <li>
+                  <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
+                </li>
+              </ul>
+              <p></p>
+            </figcaption>
+          </figure>
+        </section>
+        <section>
+          <h1>JESSIE DOE<h1>
+          <h2>Business and legacy</h2>
+          <figure>
+            <img src="" alt="Picture of Jessie Doe" title="Jessie Doe">
+            <figcaption>
+              <ul>
+                <li>
+                  <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
+                </li>
+              </ul>
+              <p></p>
+            </figcaption>
+          </figure>
+        </section>
+        <section>
+          <h1>CLIENTS</h1>
+          <ul>
+            <li>
+              <figure>
+                <img src="" alt="Image of Matthew Broderic" title="Matthew Broderic">
+                <figcaption>
+                  <h1>Matthew Broderic<span>(CEO Hopicola Inc.)</span></h1>
+                  <p></p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+          <button>
+            <img src="" alt="Icon of previous button" title="Previous button">
+          </button>
+          <button>
+            <img src="" alt="Icon of next button" title="Next button">
+          </button>
+        </section>
+      </article>
+      <article>
+        <h1>CONTACT</h1>
+        <p></p>
+        <form>
+          <input type="text" name="company-name" placeholder="Company name">
+          <input type="email" name="company-email" placeholder="Your@mail.com">
+          <textarea name="company-message" rows="10" column="50">Message...</textarea>
+          <input type="submit" name="submit-button" value="SEND MESSAGE">
+        </form>
+        <figure>
+          <img src="" alt="Map of San Francisco location" title="San Francisco location">
+          <figcaption>
+            <a href="">+970 897 580<span>(7:00 - 20:00)</span></a>
+            <a href="">info@company.com</a>
+            <a href="">USA, <span>San Francisco, 57010, Little Parry St. 826/31</span></a>
+          </figcaption>
+        </figure>
+      </article>
+    </main>
+    <footer>
+      <p>Theme by <span>Pierre Borodin</span> &copy; copyright 2012</p>
+      <ul>
+        <li>
+          <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
+        </li>
+        <li>
+          <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
+        </li>
+        <li>
+          <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
+        </li>
+        <li>
+          <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
+        </li>
+        <li>
+          <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
