Modify HTML to improve semantics

--- a/index.html
+++ b/index.html
@@ -28,67 +28,75 @@
     </header>
     <main>
       <article>
-        <h1>SERVICES</h1>
+        <h2>SERVICES</h2>
         <p></p>
         <p></p>
         <p></p>
         <section>
-          <h1>UI & UX DESIGN</h1>
+          <h3>UI &amp; UX DESIGN</h3>
           <img src="" alt="Icon of paintbrush" title="Paintbrush">
           <p></p>
         </section>
         <section>
-          <h1>LABORATORY</h1>
+          <h3>LABORATORY</h3>
           <img src="" alt="Icon of flask" title="Flask">
           <p></p>
         </section>
         <section>
-          <h1>DEVELOPMENT</h1>
+          <h3>DEVELOPMENT</h3>
           <img src="" alt="Icon of gear" title="Gear">
           <p></p>
         </section>
         <section>
-          <h1>PRICING TABLES</h1>
-          <ul>
-            <lh>BASIC</lh>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <h3>PRICING TABLES</h3>
+          <section>
+            <h4>BASIC</h4>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
             <button></button>
-          </ul>
-          <ul>
-            <lh>STANDARD</lh>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          </section>
+          <section>
+            <h4>STANDARD</h4>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
             <button></button>
-          </ul>
-          <ul>
-            <lh>PROFESSIONAL</lh>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          </section>
+          <section>
+            <h4>PROFESSIONAL</h4>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
             <button></button>
-          </ul>
-          <ul>
-            <lh>PREMIUM</lh>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          </section>
+          <section>
+            <h4>PREMIUM</h4>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
             <button></button>
-          </ul>
+          </section>
         </section>
       </article>
       <article>
-        <h1>PORTFOLIO</h1>
+        <h2>PORTFOLIO</h2>
         <ul>
           <li></li>
           <li></li>
@@ -102,14 +110,14 @@
           <li></li>
         </ul>
         <section>
-          <h1>All works</h1>
+          <h3><a href="">All works</a></h3>
           <ul>
             <li>
               <figure>
                 <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
                 <figcaption>
-                  <h1>Youtube iphone app</h1>
-                  <h2>UI design, brand & logotypes</h2>
+                  <h4>Youtube iphone app</h4>
+                  <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
@@ -117,8 +125,8 @@
               <figure>
                 <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
                 <figcaption>
-                  <h1>Youtube iphone app</h1>
-                  <h2>UI design, brand & logotypes</h2>
+                  <h4>Youtube iphone app</h4>
+                  <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
@@ -126,8 +134,8 @@
               <figure>
                 <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
                 <figcaption>
-                  <h1>Youtube iphone app</h1>
-                  <h2>UI design, brand & logotypes</h2>
+                  <h4>Youtube iphone app</h4>
+                  <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
@@ -135,8 +143,8 @@
               <figure>
                 <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
                 <figcaption>
-                  <h1>Youtube iphone app</h1>
-                  <h2>UI design, brand & logotypes</h2>
+                  <h4>Youtube iphone app</h4>
+                  <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
@@ -144,8 +152,8 @@
               <figure>
                 <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
                 <figcaption>
-                  <h1>Youtube iphone app</h1>
-                  <h2>UI design, brand & logotypes</h2>
+                  <h4>Youtube iphone app</h4>
+                  <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
@@ -153,8 +161,8 @@
               <figure>
                 <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
                 <figcaption>
-                  <h1>Youtube iphone app</h1>
-                  <h2>UI design, brand & logotypes</h2>
+                  <h4>Youtube iphone app</h4>
+                  <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
@@ -162,8 +170,8 @@
               <figure>
                 <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
                 <figcaption>
-                  <h1>Youtube iphone app</h1>
-                  <h2>UI design, brand & logotypes</h2>
+                  <h4>Youtube iphone app</h4>
+                  <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
@@ -171,8 +179,8 @@
               <figure>
                 <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
                 <figcaption>
-                  <h1>Youtube iphone app</h1>
-                  <h2>UI design, brand & logotypes</h2>
+                  <h4>Youtube iphone app</h4>
+                  <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
@@ -180,54 +188,66 @@
               <figure>
                 <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
                 <figcaption>
-                  <h1>Youtube iphone app</h1>
-                  <h2>UI design, brand & logotypes</h2>
+                  <h4>Youtube iphone app</h4>
+                  <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
           </ul>
         </section>
+        <section>
+          <h3><a href="">Webdesign</a></h3>
+        </section>
+        <section>
+          <h3><a href="">UI design</a></h3>
+        </section>
+        <section>
+          <h3><a href="">Icons design</a></h3>
+        </section>
+        <section>
+          <h3><a href="">Brand &amp; Logotypes</a></h3>
+        </section>
       </article>
       <article>
-        <h1>ABOUT</h1>
+        <h2>ABOUT</h2>
         <p></p>
         <p></p>
         <section>
-          <h1>SKILLS</h1>
+          <h3>SKILLS</h3>
           <ul>
             <li>
-              <h1>PHOTOSHOP</h1>
+              <h4>PHOTOSHOP</h4>
               <progress value="80" max="100"></progress>
             </li>
             <li>
-              <h1>HTML/CSS</h1>
+              <h4>HTML/CSS</h4>
               <progress value="90" max="100"></progress>
             </li>
             <li>
-              <h1>ILLUSTRATOR</h1>
+              <h4>ILLUSTRATOR</h4>
               <progress value="70" max="100"></progress>
             </li>
             <li>
-              <h1>PHP</h1>
+              <h4>PHP</h4>
               <progress value="60" max="100"></progress>
             </li>
             <li>
-              <h1>WORDPRESS</h1>
+              <h4>WORDPRESS</h4>
               <progress value="95" max="100"></progress>
             </li>
           </ul>
         </section>
         <aside>
-          <p>Do you want to be one of the Avengers? Join us!</p>
+          <h3>Do you want to be one of the Avengers? Join us!</h3>
           <button>CONTACT US</button>
         </aside>
       </article>
       <article>
-        <h1>TEAM</h1>
+        <h2>TEAM</h2>
         <p></p>
         <section>
-          <h1>JONATHAN DOE<h1>
-          <h2>CEO, UI&UX designer</h2>
+          <h3>JONATHAN DOE</h3>
+          <h4>CEO, UI&amp;UX designer</h4>
           <figure>
             <img src="" alt="Picture of Jonathan Doe" title="Jonathan Doe">
             <figcaption>
@@ -253,8 +273,8 @@
           </figure>
         </section>
         <section>
-          <h1>JANNETE DOE<h1>
-          <h2>Business & marketing</h2>
+          <h3>JANNETE DOE</h3>
+          <h4>Business &amp; marketing</h4>
           <figure>
             <img src="" alt="Picture of Jannete Doe" title="Jannete Doe">
             <figcaption>
@@ -280,8 +300,8 @@
           </figure>
         </section>
         <section>
-          <h1>JANE ELLA DOE<h1>
-          <h2>UX specialist</h2>
+          <h3>JANE ELLA DOE</h3>
+          <h4>UX specialist</h4>
           <figure>
             <img src="" alt="Picture of Jane Ella Doe" title="Jane Ella Doe">
             <figcaption>
@@ -307,8 +327,8 @@
           </figure>
         </section>
         <section>
-          <h1>JESSIE DOE<h1>
-          <h2>Business and legacy</h2>
+          <h3>JESSIE DOE</h3>
+          <h4>Business and legacy</h4>
           <figure>
             <img src="" alt="Picture of Jessie Doe" title="Jessie Doe">
             <figcaption>
@@ -334,13 +354,13 @@
           </figure>
         </section>
         <section>
-          <h1>CLIENTS</h1>
+          <h3>CLIENTS</h3>
           <ul>
             <li>
               <figure>
                 <img src="" alt="Image of Matthew Broderic" title="Matthew Broderic">
                 <figcaption>
-                  <h1>Matthew Broderic<span>(CEO Hopicola Inc.)</span></h1>
+                  <h4>Matthew Broderic<span>(CEO Hopicola Inc.)</span></h4>
                   <p></p>
                 </figcaption>
               </figure>
@@ -355,12 +375,12 @@
         </section>
       </article>
       <article>
-        <h1>CONTACT</h1>
+        <h2>CONTACT</h2>
         <p></p>
         <form>
           <input type="text" name="company-name" placeholder="Company name">
           <input type="email" name="company-email" placeholder="Your@mail.com">
-          <textarea name="company-message" rows="10" column="50">Message...</textarea>
+          <textarea name="company-message" rows="10" cols="50">Message...</textarea>
           <input type="submit" name="submit-button" value="SEND MESSAGE">
         </form>
         <figure>
