Finalize HTML to include all relevant text

--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
     <main>
       <article>
         <h2>SERVICES</h2>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <section>
           <h3>UI &amp; UX DESIGN</h3>
           <img src="" alt="Icon of paintbrush" title="Paintbrush">
-          <p></p>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
         </section>
         <section>
           <h3>LABORATORY</h3>
           <img src="" alt="Icon of flask" title="Flask">
-          <p></p>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
         </section>
         <section>
           <h3>DEVELOPMENT</h3>
           <img src="" alt="Icon of gear" title="Gear">
-          <p></p>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
         </section>
         <section>
           <h3>PRICING TABLES</h3>
@@ -97,7 +97,7 @@
       </article>
       <article>
         <h2>PORTFOLIO</h2>
-        <ul>
+<!--         <ul>
           <li></li>
           <li></li>
           <li></li>
@@ -108,7 +108,7 @@
             <input type="radio" name="slider button" value="four" checked="checked">
           </li>
           <li></li>
-        </ul>
+        </ul> -->
         <section>
           <h3><a href="">All works</a></h3>
           <ul>
@@ -123,73 +123,73 @@
             </li>
             <li>
               <figure>
-                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <a href=""><img src="" alt="Image of Avengers welcome screen" title="Avengers welcome screen"></a>
                 <figcaption>
-                  <h4>Youtube iphone app</h4>
+                  <h4>Hexagon onepage</h4>
+                  <p>Webdesign, brand &amp; logotypes</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of drawing tools and sketches of fantasy characters" title="Fantasy character sketches"></a>
+                <figcaption>
+                  <h4>Sketches icon</h4>
+                  <p>Icons design, brand &amp; logotypes</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of logotypes on screen" title="Logotypes"></a>
+                <figcaption>
+                  <h4>Logotypes volume</h4>
                   <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <a href=""><img src="" alt="Image of app screen with points displayed" title="Points screen"></a>
                 <figcaption>
-                  <h4>Youtube iphone app</h4>
+                  <h4>Flight control</h4>
+                  <p>Webdesign, brand &amp; logotypes</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
+                <figcaption>
+                  <h4>Youtube app</h4>
+                  <p>Icons design, brand &amp; logotypes</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a href=""><img src="" alt="Image of app screen for claim management" title="Claim management screen"></a>
+                <figcaption>
+                  <h4>Management</h4>
                   <p>UI design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <a href=""><img src="" alt="Image of recipe app screen for korean bulgogi beef" title="Korean beef recipe screen"></a>
                 <figcaption>
-                  <h4>Youtube iphone app</h4>
-                  <p>UI design, brand &amp; logotypes</p>
+                  <h4>Korean beef</h4>
+                  <p>Webdesign, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
+                <a href=""><img src="" alt="Image of Facebook like and dislike thumb icons" title="Facebook thumbs"></a>
                 <figcaption>
-                  <h4>Youtube iphone app</h4>
-                  <p>UI design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
-                <figcaption>
-                  <h4>Youtube iphone app</h4>
-                  <p>UI design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
-                <figcaption>
-                  <h4>Youtube iphone app</h4>
-                  <p>UI design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
-                <figcaption>
-                  <h4>Youtube iphone app</h4>
-                  <p>UI design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
-                <figcaption>
-                  <h4>Youtube iphone app</h4>
-                  <p>UI design, brand &amp; logotypes</p>
+                  <h4>Facebook thumbs</h4>
+                  <p>Icons design, brand &amp; logotypes</p>
                 </figcaption>
               </figure>
             </li>
@@ -210,8 +210,8 @@
       </article>
       <article>
         <h2>ABOUT</h2>
-        <p></p>
-        <p></p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <section>
           <h3>SKILLS</h3>
           <ul>
@@ -238,13 +238,13 @@
           </ul>
         </section>
         <aside>
-          <h3>Do you want to be one of the Avengers? Join us!</h3>
+          <h3>Do you want to be one of Avengers? Join us!</h3>
           <button>CONTACT US</button>
         </aside>
       </article>
       <article>
         <h2>TEAM</h2>
-        <p></p>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <section>
           <h3>JONATHAN DOE</h3>
           <h4>CEO, UI&amp;UX designer</h4>
@@ -268,7 +268,7 @@
                   <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
                 </li>
               </ul>
-              <p></p>
+              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
             </figcaption>
           </figure>
         </section>
@@ -295,7 +295,7 @@
                   <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
                 </li>
               </ul>
-              <p></p>
+              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
             </figcaption>
           </figure>
         </section>
@@ -322,7 +322,7 @@
                   <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
                 </li>
               </ul>
-              <p></p>
+              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
             </figcaption>
           </figure>
         </section>
@@ -349,7 +349,7 @@
                   <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
                 </li>
               </ul>
-              <p></p>
+              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
             </figcaption>
           </figure>
         </section>
@@ -361,7 +361,7 @@
                 <img src="" alt="Image of Matthew Broderic" title="Matthew Broderic">
                 <figcaption>
                   <h4>Matthew Broderic<span>(CEO Hopicola Inc.)</span></h4>
-                  <p></p>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </figcaption>
               </figure>
             </li>
@@ -376,7 +376,7 @@
       </article>
       <article>
         <h2>CONTACT</h2>
-        <p></p>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <form>
           <input type="text" name="company-name" placeholder="Company name">
           <input type="email" name="company-email" placeholder="Your@mail.com">
