--- a/basic-pricing.html
+++ b/basic-pricing.html
@@ -11,7 +11,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/pricing-tables.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <section>
