--- a/basic-pricing.html
+++ b/basic-pricing.html
@@ -14,16 +14,58 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <section>
-      <h4>BASIC</h4>
+    <section class="pricing">
+      <h4 class="pricing-header">BASIC</h4>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li class="pricing-plan"><span class="pricing-cost">$5.99</span> /MONTH</li>
+        <li class="pricing-stats">3 Projects</li>
+        <li class="pricing-stats">2 Users</li>
+        <li class="pricing-stats">1 Gb</li>
+        <li class="pricing-stats">1 Calendar</li>
       </ul>
-      <button class="pricing-button">SIGN UP</button>
+      <div class="pricing-button-container">
+        <a href=""><button class="pricing-button">SIGN UP</button></a>
+      </div>
     </section>
+    <section class="pricing">
+      <h4 class="pricing-header">STANDARD</h4>
+      <ul>
+        <li class="pricing-plan"><span class="pricing-cost">$10.99</span> /MONTH</li>
+        <li class="pricing-stats">7 Projects</li>
+        <li class="pricing-stats">5 Users</li>
+        <li class="pricing-stats">10 Gb User</li>
+        <li class="pricing-stats">5 Calendar</li>
+      </ul>
+      <div class="pricing-button-container">
+        <a href=""><button class="pricing-button">SIGN UP</button></a>
+      </div>
+    </section>
+    <section class="pricing">
+      <h4 class="pricing-header">PROFESSIONAL</h4>
+      <ul>
+        <li class="pricing-plan"><span class="pricing-cost">$25.99</span> /MONTH</li>
+        <li class="pricing-stats">15 Projects</li>
+        <li class="pricing-stats">50 Users</li>
+        <li class="pricing-stats">100 Gb User</li>
+        <li class="pricing-stats">25 Calendar</li>
+      </ul>
+      <div class="pricing-button-container">
+        <a href=""><button class="pricing-button">SIGN UP</button></a>
+      </div>
+    </section>
+    <section class="pricing">
+      <h4 class="pricing-header">PREMIUM</h4>
+      <ul>
+        <li class="pricing-plan"><span class="pricing-cost">$49.99</span> /MONTH</li>
+        <li class="pricing-stats">UNLIMITED Projects</li>
+        <li class="pricing-stats">UNLIMITED Users</li>
+        <li class="pricing-stats">1000 Gb User</li>
+        <li class="pricing-stats">UNLIMITED Calendar</li>
+      </ul>
+      <div class="pricing-button-container">
+        <a href=""><button class="pricing-button">SIGN UP</button></a>
+      </div>
+    </section>
+  </section>
   </body>
 </html>
