add sub-section header styles
Including: horizontal white line. Added spans
to the h3 'pricing' section element

--- a/basic-pricing.html
+++ b/basic-pricing.html
@@ -14,58 +14,60 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <section class="pricing">
-      <h4 class="pricing-header">BASIC</h4>
-      <ul>
-        <li class="pricing-plan"><span class="pricing-cost">$5.99</span> /MONTH</li>
-        <li class="pricing-stats">3 Projects</li>
-        <li class="pricing-stats">2 Users</li>
-        <li class="pricing-stats">1 Gb</li>
-        <li class="pricing-stats">1 Calendar</li>
-      </ul>
-      <div class="pricing-button-container">
-        <a href=""><button class="pricing-button">SIGN UP</button></a>
-      </div>
+    <section style="background-color: #fd6632; width: 100%;">
+      <h3 class="sub-section-header"><span class="horizontal-rule">PRICING TABLES</span></h3>
+      <section class="pricing">
+        <h4 class="pricing-header">BASIC</h4>
+        <ul>
+          <li class="pricing-plan"><span class="pricing-cost">$5.99</span> /MONTH</li>
+          <li class="pricing-stats">3 Projects</li>
+          <li class="pricing-stats">2 Users</li>
+          <li class="pricing-stats">1 Gb</li>
+          <li class="pricing-stats">1 Calendar</li>
+        </ul>
+        <div class="pricing-button-container">
+          <a href=""><button class="pricing-button">SIGN UP</button></a>
+        </div>
+      </section>
+      <section class="pricing">
+        <h4 class="pricing-header">STANDARD</h4>
+        <ul>
+          <li class="pricing-plan"><span class="pricing-cost">$10.99</span> /MONTH</li>
+          <li class="pricing-stats">7 Projects</li>
+          <li class="pricing-stats">5 Users</li>
+          <li class="pricing-stats">10 Gb User</li>
+          <li class="pricing-stats">5 Calendar</li>
+        </ul>
+        <div class="pricing-button-container">
+          <a href=""><button class="pricing-button">SIGN UP</button></a>
+        </div>
+      </section>
+      <section class="pricing">
+        <h4 class="pricing-header">PROFESSIONAL</h4>
+        <ul>
+          <li class="pricing-plan"><span class="pricing-cost">$25.99</span> /MONTH</li>
+          <li class="pricing-stats">15 Projects</li>
+          <li class="pricing-stats">50 Users</li>
+          <li class="pricing-stats">100 Gb User</li>
+          <li class="pricing-stats">25 Calendar</li>
+        </ul>
+        <div class="pricing-button-container">
+          <a href=""><button class="pricing-button">SIGN UP</button></a>
+        </div>
+      </section>
+      <section class="pricing">
+        <h4 class="pricing-header">PREMIUM</h4>
+        <ul>
+          <li class="pricing-plan"><span class="pricing-cost">$49.99</span> /MONTH</li>
+          <li class="pricing-stats">UNLIMITED Projects</li>
+          <li class="pricing-stats">UNLIMITED Users</li>
+          <li class="pricing-stats">1000 Gb User</li>
+          <li class="pricing-stats">UNLIMITED Calendar</li>
+        </ul>
+        <div class="pricing-button-container">
+          <a href=""><button class="pricing-button">SIGN UP</button></a>
+        </div>
+      </section>
     </section>
-    <section class="pricing">
-      <h4 class="pricing-header">STANDARD</h4>
-      <ul>
-        <li class="pricing-plan"><span class="pricing-cost">$10.99</span> /MONTH</li>
-        <li class="pricing-stats">7 Projects</li>
-        <li class="pricing-stats">5 Users</li>
-        <li class="pricing-stats">10 Gb User</li>
-        <li class="pricing-stats">5 Calendar</li>
-      </ul>
-      <div class="pricing-button-container">
-        <a href=""><button class="pricing-button">SIGN UP</button></a>
-      </div>
-    </section>
-    <section class="pricing">
-      <h4 class="pricing-header">PROFESSIONAL</h4>
-      <ul>
-        <li class="pricing-plan"><span class="pricing-cost">$25.99</span> /MONTH</li>
-        <li class="pricing-stats">15 Projects</li>
-        <li class="pricing-stats">50 Users</li>
-        <li class="pricing-stats">100 Gb User</li>
-        <li class="pricing-stats">25 Calendar</li>
-      </ul>
-      <div class="pricing-button-container">
-        <a href=""><button class="pricing-button">SIGN UP</button></a>
-      </div>
-    </section>
-    <section class="pricing">
-      <h4 class="pricing-header">PREMIUM</h4>
-      <ul>
-        <li class="pricing-plan"><span class="pricing-cost">$49.99</span> /MONTH</li>
-        <li class="pricing-stats">UNLIMITED Projects</li>
-        <li class="pricing-stats">UNLIMITED Users</li>
-        <li class="pricing-stats">1000 Gb User</li>
-        <li class="pricing-stats">UNLIMITED Calendar</li>
-      </ul>
-      <div class="pricing-button-container">
-        <a href=""><button class="pricing-button">SIGN UP</button></a>
-      </div>
-    </section>
-  </section>
   </body>
 </html>
