add @media queries to the pricing component

--- a/basic-pricing.html
+++ b/basic-pricing.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <section style="background-color: #fd6632; width: 100%;">
+    <section class="pricing">
       <h3 class="sub-section-header"><span class="horizontal-rule">PRICING TABLES</span></h3>
-      <section class="pricing">
+      <section class="pricing-tables">
         <h4 class="pricing-header">BASIC</h4>
         <ul>
           <li class="pricing-plan"><span class="pricing-cost">$5.99</span> /MONTH</li>
@@ -29,7 +29,7 @@
           <a href=""><button class="pricing-button">SIGN UP</button></a>
         </div>
       </section>
-      <section class="pricing">
+      <section class="pricing-tables">
         <h4 class="pricing-header">STANDARD</h4>
         <ul>
           <li class="pricing-plan"><span class="pricing-cost">$10.99</span> /MONTH</li>
@@ -42,7 +42,7 @@
           <a href=""><button class="pricing-button">SIGN UP</button></a>
         </div>
       </section>
-      <section class="pricing">
+      <section class="pricing-tables">
         <h4 class="pricing-header">PROFESSIONAL</h4>
         <ul>
           <li class="pricing-plan"><span class="pricing-cost">$25.99</span> /MONTH</li>
@@ -55,7 +55,7 @@
           <a href=""><button class="pricing-button">SIGN UP</button></a>
         </div>
       </section>
-      <section class="pricing">
+      <section class="pricing-tables">
         <h4 class="pricing-header">PREMIUM</h4>
         <ul>
           <li class="pricing-plan"><span class="pricing-cost">$49.99</span> /MONTH</li>
