Modify HTML and add CSS for Team profiles section
Removed <ul> and <li> elements from HTML
Add icon

--- a/index.html
+++ b/index.html
@@ -242,114 +242,66 @@
           <button>CONTACT US</button>
         </aside>
       </article>
-      <article>
+      <article class="team">
         <h2>TEAM</h2>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
-        <section>
-          <h3>JONATHAN DOE</h3>
-          <h4>CEO, UI&amp;UX designer</h4>
+        <section class="team-profile">
+          <h3 class="profile-header">JONATHAN DOE</h3>
+          <h4 class="profile-text">CEO, UI&amp;UX designer</h4>
           <figure>
-            <img src="" alt="Picture of Jonathan Doe" title="Jonathan Doe">
+            <img src="img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image">
             <figcaption>
-              <ul>
-                <li>
-                  <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
-                </li>
-              </ul>
-              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+              <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
+              <a href="https://twitter.com" class="social-icons icon-twitter"></a>
+              <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
+              <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
+              <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
+              <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
             </figcaption>
           </figure>
         </section>
-        <section>
-          <h3>JANNETE DOE</h3>
-          <h4>Business &amp; marketing</h4>
+        <section class="team-profile">
+          <h3 class="profile-header">JANNETE DOE</h3>
+          <h4 class="profile-text">Business &amp; marketing</h4>
           <figure>
-            <img src="" alt="Picture of Jannete Doe" title="Jannete Doe">
+            <img src="img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image">
             <figcaption>
-              <ul>
-                <li>
-                  <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
-                </li>
-              </ul>
-              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+              <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
+              <a href="https://twitter.com" class="social-icons icon-twitter"></a>
+              <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
+              <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
+              <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
+              <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
             </figcaption>
           </figure>
         </section>
-        <section>
-          <h3>JANE ELLA DOE</h3>
-          <h4>UX specialist</h4>
+        <section class="team-profile">
+          <h3 class="profile-header">JANE ELLA DOE</h3>
+          <h4 class="profile-text">UX specialist</h4>
           <figure>
-            <img src="" alt="Picture of Jane Ella Doe" title="Jane Ella Doe">
+            <img src="img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image">
             <figcaption>
-              <ul>
-                <li>
-                  <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
-                </li>
-              </ul>
-              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+              <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
+              <a href="https://twitter.com" class="social-icons icon-twitter"></a>
+              <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
+              <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
+              <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
+              <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
             </figcaption>
           </figure>
         </section>
-        <section>
-          <h3>JESSIE DOE</h3>
-          <h4>Business and legacy</h4>
+        <section class="team-profile">
+          <h3 class="profile-header">JESSIE DOE</h3>
+          <h4 class="profile-text">Business and legacy</h4>
           <figure>
-            <img src="" alt="Picture of Jessie Doe" title="Jessie Doe">
+            <img src="img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image">
             <figcaption>
-              <ul>
-                <li>
-                  <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
-                </li>
-              </ul>
-              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+              <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
+              <a href="https://twitter.com" class="social-icons icon-twitter"></a>
+              <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
+              <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
+              <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
+              <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
             </figcaption>
           </figure>
         </section>
